# VoxelShooter

./: CMakeLists.txt  README.md  buffer.h  camera.cpp  camera.h  character.cpp  character.h  codeblocks.h  control.cpp  control.h  defines.h  dir.h  draw.cpp  enemy.cpp  enemy.h  error.cpp  error.h  font.cpp  font.h  fps_camera.h  hitbox.cpp  ideen  includes.h  index_buffer.cpp  index_buffer.h  init.cpp  init.h  level.cpp  level.h  longTerm  loop.cpp  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  projektil.cpp  projektil.h  schule  screenshot  (+11 more)
3d_models/: character.mtl  crab.mtl
3d_models/mds/: character.mds  sphere.mds
assets/charactersample/: CyberpunkChar_0.fbx
assets/free/folder/character/: ExampleExport.mtl
assets/free/folder/enimyshield/: Shield.glb
assets/free/folder/ownshield/: shield v2.glb
assets/free/zip/: Wooden Shield.rar
assets/paid/folder/cyberpunk street base/: Awning_00.fbx  Bar_00.fbx  BillboardModule_Backplate_A_00.fbx  BillboardModule_Backplate_B_00.fbx  BillboardModule_Backplate_C_00.fbx  BillboardModule_Backplate_D_00.fbx  BillboardModule_Backplate_E_00.fbx  BillboardModule_Backplate_F_00.fbx  BillboardModule_ChineseSymbol_AA_00.fbx  BillboardModule_ChineseSymbol_AB_00.fbx  BillboardModule_ChineseSymbol_AC_00.fbx  BillboardModule_ChineseSymbol_AD_00.fbx  BillboardModule_ChineseSymbol_AE_00.fbx  BillboardModule_ChineseSymbol_AF_00.fbx  BillboardModule_ChineseSymbol_AG_00.fbx  BillboardModule_ChineseSymbol_A_00.fbx  BillboardModule_ChineseSymbol_B_00.fbx  BillboardModule_ChineseSymbol_C_00.fbx  BillboardModule_ChineseSymbol_D_00.fbx  BillboardModule_ChineseSymbol_E_00.fbx  BillboardModule_ChineseSymbol_F_00.fbx  BillboardModule_ChineseSymbol_G_00.fbx  BillboardModule_ChineseSymbol_H_00.fbx  BillboardModule_ChineseSymbol_I_00.fbx  BillboardModule_ChineseSymbol_J_00.fbx  BillboardModule_ChineseSymbol_K_00.fbx  BillboardModule_ChineseSymbol_L_00.fbx  BillboardModule_ChineseSymbol_M_00.fbx  BillboardModule_ChineseSymbol_N_00.fbx  BillboardModule_ChineseSymbol_O_00.fbx  (+351 more)
libs/: stb_truetype.h
mds/: boden.mds  characterSample.mds  debug.mds  fern.mds  gestapoShield.mds  kugel.mds  level.mds  main.mds  modelexporter  shop1.mds
mds/debug/: Shop-2-PhoneCabin.mds  Shop-3-Car.mds
mds/enemy/: enemy1.fbx  enemy1.mds
mds/level1/: CyberpunkChar_0.mds  ExampleExport.mds  Shop-0-ShopBuilding_1.mds  Shop-1-ShopBuilding_2.mds  Shop-4-GroundTile.mds
mds/level2/: level2.mds  level2.mtl
shaders/: basic.fs  basic.vs  font.fs  font.vs
story/: Player.md  endboss.md  wende.md
story/image/: main
test/: black_hole.cpp  leeres fenster.cpp  test.cpp  vao.cpp
tools/: modelexporter.cpp
